--- a/src/templates/list.tmpl
+++ b/src/templates/list.tmpl
@@ -4,13 +4,13 @@
   </head>
 
   <body style="margin: 20px;">
-    <h1>Wishes</h1>
+    <h1>Badges</h1>
     {{range .}}
       <div> {{.Name}} - {{.Description}}</div>
     {{ end }}
 
-    <h1>Add a wish</h1>
-    <form action="/wishes" method="POST" class="pure-form">
+    <h1>Add a badge</h1>
+    <form action="/badges" method="POST" class="pure-form">
       <input type="text" name="name" placeholder="name" />
       <input type="text" name="description" placeholder="description" />
       <input type="submit" value="submit" class="pure-button pure-button-primary"/>
