--- a/src/templates/list.tmpl
+++ b/src/templates/list.tmpl
@@ -6,14 +6,18 @@
   <body style="margin: 20px;">
     <h1>Badges</h1>
     {{range .}}
-      <div> {{.Name}} - {{.Description}}</div>
+      <div> {{.Badge}} </div>
+      <div> {{.Points}} </div>
+      <div> {{.Required}} </div>
+      <div> {{.Given}} </div>
+      <hr>
     {{ end }}
 
-    <h1>Add a badge</h1>
+   <!--  <h1>Add a badge</h1>
     <form action="/badges" method="POST" class="pure-form">
       <input type="text" name="name" placeholder="name" />
       <input type="text" name="description" placeholder="description" />
       <input type="submit" value="submit" class="pure-button pure-button-primary"/>
-    </form>
+    </form> -->
   </body>
 </html>
