--- a/src/frontend/cheeves.css
+++ b/src/frontend/cheeves.css
@@ -18,21 +18,23 @@ transition: all 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
 
 }
 
+img {
+	margin-top: 15px;
+}
+
 #cheeve h2, #cheeve p {
-	text-align:center
+text-align:center
 }
 
 #left {
 width: 90px;
-height: 100%;
-loat: left;
+float: left;
 }
 
 #right {
 margin-left: 90px;
 }
-
-.clear{
+.clear {
 clear: both;
 }
 
